--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
+  position: relative;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.hover-area {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: 'transparent';
   color: white;
+  z-index: 1;
+  height: 100%;
+  width: 250px;
 }
 
-.App-link {
-  color: #61dafb;
+.category-section {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: -250px; /* 숨긴 상태의 초기 위치 */
+  width: 250px;
+  height: 100%;
+  background-color: 'transparent';
+  /* box-shadow: 2px 0 5px rgba(0,0,0,0.3); */
+  overflow: hidden;
+  transition: left 0.3s ease;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.category-section.visible {
+  left: 0; /* hover 시 보이도록 위치 변경 */
+}
+
+.category-section ul {
+  list-style: none;
+  padding: 40px;
+}
+
+.category-section li {
+  color:#ddd;
+  margin: 40px 0;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.category-section li:hover {
+  font-weight: 900;
 }
