--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
+:root {
+  background-color: black;
+
+}
 .app {
   position: relative;
   height: 100vh;
+  width: 100vw;
   align-items: center;
   justify-content: center;
 }
