--- a/src/components/contact/Contact.module.css
+++ b/src/components/contact/Contact.module.css
@@ -1,15 +1,19 @@
 
   .container {
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    max-width: 500px;
-    width: 100%;
+    display: flex;
+    background-color: black;
+    /* border-radius: 10px; */
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
     padding: 20px;
-    margin: 20px;
-    box-sizing: border-box;
   }
-  
+  .subContainer{
+    display: flex;
+    flex-direction: column;
+  }
   h1 {
     text-align: center;
     color: #333;
@@ -28,7 +32,7 @@
   label {
     margin-bottom: 5px;
     font-weight: bold;
-    color: #333;
+    color: #ddd;
   }
   
   input, textarea {
@@ -70,7 +74,7 @@
     background-color: #3e8e41;
   }
   
-  @media (max-width: 600px) {
+  /* @media (max-width: 600px) {
     .App {
       padding: 15px;
       margin: 10px;
@@ -80,5 +84,5 @@
       font-size: 14px;
       padding: 10px;
     }
-  }
+  } */
   
